--- a/RePhoto/RePhoto.csproj
+++ b/RePhoto/RePhoto.csproj
@@ -118,9 +118,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="Images\logo.jpg" />
-    <Resource Include="Images\appbar.basecircle.rest.png" />
-    <Resource Include="Images\appbar.feature.camera.rest.png" />
-    <Resource Include="Images\appbar.feature.settings.rest.png" />
+    <Content Include="Images\appbar.basecircle.rest.png" />
+    <Content Include="Images\appbar.feature.camera.rest.png" />
+    <Content Include="Images\appbar.feature.settings.rest.png" />
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <ItemGroup />
